--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ bleach==3.3.0
 cffi==1.14.6
 cx-Oracle==8.2.1
 cycler==0.10.0
+Cython==0.29.24
 db==0.1.1
 db-sqlite3==0.0.1
 debugpy==1.3.0
@@ -50,6 +51,7 @@ plotly==5.1.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 ptyprocess==0.7.0
+pybind11==2.7.1
 pycparser==2.20
 Pygments==2.9.0
 pyparsing==2.4.7
